--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -193,8 +193,8 @@
                 <h5 form-editor-localize key="action.task.header">...perform this action:</h5>
                 <div class="form-action-task">
                   <select ng-model="action.task">
-                    <option value="show">Show</option>
-                    <option value="hide">Hide</option>
+                    <option value="core.showfield">Show</option>
+                    <option value="core.hidefield">Hide</option>
                   </select>
                   <span>the field</span>
                   <select ng-model="action.field" ng-options="field.name for field in allValueFields()">
