--- a/Source/Umbraco/Plugin/editor/fields/core.invisiblerecaptcha.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.invisiblerecaptcha.html
@@ -5,6 +5,12 @@
         <form-editor-field-header></form-editor-field-header>
 
         <div class="umb-pane">
+          <label class="control-label" for="text">
+            <form-editor-localize key="edit.submitButton.label">Button text</form-editor-localize>
+            <small form-editor-localize key="edit.submitButton.label.helpText">The text displayed on the button - e.g. "Save" or "Send"</small>
+          </label>
+          <input type="text" id="text" autofocus ng-model="dialogData.field.text" />
+
           <form-editor-field-error-message></form-editor-field-error-message>
         </div>
       </div>
