--- a/Source/Umbraco/Plugin/editor/fields/core.checkboxgroup.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.checkboxgroup.html
@@ -7,7 +7,7 @@
         <div class="umb-pane">
           <form-editor-field-basics></form-editor-field-basics>
 
-          <form-editor-field-options option-selected-text-key="edit.checked" option-selected-text-default="Checked"></form-editor-field-options>
+          <form-editor-field-options option-selected-text-key="edit.checked" option-selected-text-default="Checked" multi-value-field="true"></form-editor-field-options>
 
           <form-editor-field-mandatory></form-editor-field-mandatory>
           <form-editor-field-error-message></form-editor-field-error-message>
