--- a/Source/Umbraco/Plugin/editor/fields/core.selectbox.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.selectbox.html
@@ -7,7 +7,7 @@
         <div class="umb-pane">
           <form-editor-field-basics></form-editor-field-basics>
 
-          <form-editor-field-options></form-editor-field-options>
+          <form-editor-field-options multi-value-field="true"></form-editor-field-options>
 
           <label class="control-label" for="multiSelect">
             <input type="checkbox" id="multiSelect" ng-model="dialogData.field.multiSelect" />
