--- a/Source/Umbraco/Plugin/editor/data.html
+++ b/Source/Umbraco/Plugin/editor/data.html
@@ -117,6 +117,15 @@
         </a>
       </div>
     </div>
+    <div class="form-data-tools">
+      <label class="control-label" for="daysBeforeExpiry" form-editor-localize key="data.daysBeforeExpiry">
+        Days to keep submissions
+      </label>
+      <div class="controls controls-row">
+        <input type="number" class="umb-editor" id="daysBeforeExpiry" ng-model="model.value.daysBeforeSubmissionExpiry">
+        <small class="help-text" form-editor-localize key="data.daysBeforeExpiry.helpText">Enter the number of days to keep form submissions before they're automatically deleted. Leave empty to disable automatic deletion.</small>
+      </div>
+    </div>
   </div>
 
   <script type="text/ng-template" id="data.viewEntry.html">
