Bit of text redo

--- a/Source/Umbraco/Plugin/editor/fields/core.consent.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.consent.html
@@ -18,8 +18,8 @@
           <textarea id="consentText" ng-model="dialogData.field.consentText" style="width:320px;height:250px;"></textarea>
 
           <label class="control-label">
-            <form-editor-localize key="edit.consent.linkText">Terms and conditions page</form-editor-localize>
-            <small form-editor-localize key="edit.consent.linkPage.helpText">Choose the terms and conditions page</small>
+            <form-editor-localize key="edit.consent.linkText">Privacy policy page link</form-editor-localize>
+            <small form-editor-localize key="edit.consent.linkPage.helpText">Choose the page that outlines your privacy poliy</small>
           </label>
 
           <div class="controls controls-row">
