Separate submission expiry into IAutomationIndex (on index level) and make it an optional feature

--- a/Source/Umbraco/Plugin/editor/data.html
+++ b/Source/Umbraco/Plugin/editor/data.html
@@ -117,7 +117,7 @@
         </a>
       </div>
     </div>
-    <div class="form-data-tools">
+    <div class="form-data-tools" ng-show="supportsExpiry">
       <label class="control-label" for="daysBeforeExpiry" form-editor-localize key="data.daysBeforeExpiry">
         Days to keep submissions
       </label>
