--- a/Source/Umbraco/Plugin/editor/fields/core.textarea.html
+++ b/Source/Umbraco/Plugin/editor/fields/core.textarea.html
@@ -12,7 +12,7 @@
             <form-editor-localize key="edit.maxLength">Max length</form-editor-localize>
             <small form-editor-localize key="edit.maxLength.helpText">Max number of characters allowed (0 = unlimited)</small>
           </label>
-          <input type="number" id="maxLength" ng-model="dialogData.field.maxLength" />
+          <input type="number" min="0" id="maxLength" ng-model="dialogData.field.maxLength" />
 
           <form-editor-field-mandatory></form-editor-field-mandatory>
           <form-editor-field-error-message></form-editor-field-error-message>
