--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -216,7 +216,7 @@
                     <option value="core.showfield">Show</option>
                     <option value="core.hidefield">Hide</option>
                   </select>
-                  <span>the field</span>
+                  <span form-editor-localize key="action.task.theField">the field</span>
                   <select ng-model="action.field" ng-options="field.name for field in allValueFields()">
                     <option value=""></option>
                   </select>
