--- a/Source/Umbraco/Plugin/editor/form.html
+++ b/Source/Umbraco/Plugin/editor/form.html
@@ -292,7 +292,7 @@
       </label>
       <div class="controls controls-row">
         <input type="text" form-editor-multiple-emails class="umb-editor" id="emailNotificationRecipients" ng-model="model.value.emailNotificationRecipients" />
-		<small class="help-text" form-editor-localize="" key="email.submittedValues.helpText">You can send to multiple email addresses by seperating them with a single comma.</small>
+        <small class="help-text" form-editor-localize="" key="emailNotification.recipients.helpText">You can send to multiple email addresses by seperating them with a single comma.</small>
       </div>
       <label class="control-label" for="emailNotificationSubject" form-editor-localize key="emailNotification.subject">
         Email subject
